--- a/package.json
+++ b/package.json
@@ -1,31 +1,61 @@
 {
-  "name": "Rooms",
-  "version": "0.1.0",
-  "description": "A Simple Meeting Room Display",
-  "private": false,
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "name": "IoNube",
+  "version": "1.0.0",
+  "description": "Proyecto para reserva de salas hecho en Redux.js + React.js con Node.js",
+  "main": "server-local.js",
   "dependencies": {
+    "@slack/client": "^4.1.0",
+    "autoprefixer": "^8.2.0",
+    "axios": "^0.12.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.3.13",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "classnames": "^2.2.5",
-    "connect-history-api-fallback": "^1.3.0",
-    "express": "^4.15.3",
-    "googleapis": "^20.1.0",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.13",
-    "node-google-calendar": "^1.0.0",
-    "precss": "^2.0.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-helmet": "^5.1.3",
-    "react-router-dom": "^4.1.1"
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "googleapis": "20.1.0",
+    "json-loader": "^0.5.7",
+    "moment": "^2.22.0",
+    "moment-timezone": "^0.5.14",
+    "offline": "0.0.1",
+    "precss": "^3.1.2",
+    "react": "^0.14.6",
+    "react-animated-ellipsis": "^0.3.0",
+    "react-countdown-now": "^1.3.0",
+    "react-dom": "^0.14.6",
+    "react-helmet": "^5.2.0",
+    "react-lottie": "^1.1.0",
+    "react-redux": "^4.4.5",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.5.2",
+    "redux-promise-middleware": "^3.2.0",
+    "redux-thunk": "^2.1.0",
+    "serverless": "^1.26.1",
+    "style-loader": "^0.20.3",
+    "webpack": "^1.12.9"
   },
   "devDependencies": {
-    "nwb": "0.18.x"
+    "redux-devtools-extension": "^2.13.2",
+    "serverless-offline": "^3.20.2",
+    "webpack-dev-server": "^1.14.1",
+    "redux-logger": "^2.6.1",
+    "nodemon": "^1.17.3",
+    "connect-history-api-fallback": "^1.5.0"
+  },
+  "scripts": {
+    "build": "webpack -w",
+    "production":"webpack -p --define process.env.NODE_ENV='\"production\"' --progress --colors",
+    "local-server": "sudo nodemon ./servers/local/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "MIT",
-  "repository": ""
+  "license": "ISC"
 }
