--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "serve": "nodemon server.js"
   },
   "dependencies": {
+    "@slack/client": "^4.1.0",
     "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.3.0",
+    "dotenv": "^5.0.1",
     "express": "^4.15.3",
     "googleapis": "^20.1.0",
     "moment": "^2.22.0",
