--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "webpack.config.js",
   "dependencies": {
     "@slack/client": "^4.1.0",
-    "dotenv": "^5.0.1",
     "autoprefixer": "^8.2.0",
     "axios": "^0.12.0",
     "babel-core": "^6.18.2",
@@ -17,9 +16,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "classnames": "^2.2.5",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "googleapis": "20.1.0",
     "moment": "^2.22.0",
