--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^0.14.6",
     "react-helmet": "^5.2.0",
     "react-redux": "^4.4.5",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
@@ -43,7 +44,7 @@
     "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server --content-base src --inline --hot --port 3166",
+    "dev": "./node_modules/.bin/webpack-dev-server --history-api-fallback --content-base src --inline --hot --port 3167",
     "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
