--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "googleapis": "20.1.0",
+    "json-loader": "^0.5.7",
     "moment": "^2.22.0",
     "moment-timezone": "^0.5.14",
     "nodemon": "^1.17.3",
@@ -30,6 +31,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-helmet": "^5.2.0",
+    "react-lottie": "^1.1.0",
     "react-redux": "^4.4.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.5.2",
