--- a/serverless.yml
+++ b/serverless.yml
@@ -1,7 +1,15 @@
 service: ionube
 provider:
   name: aws
-  runtime: nodejs6.10
+  runtime: nodejs8.10
+  region: us-west-1
+package:
+#    - include-me-dir/**
+  exclude:
+    - node_modules/**
+    - src/img/**
+    - src/js/**
+
 
 # you can overwrite defaults here
 #  stage: dev
@@ -37,12 +45,19 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  sala:
+    handler: handler.getSalaInfo
     events:
       - http:
-          path: users/create
+          path: /sala
           method: get
+          cors: true
+          request:
+            template:
+              application/json: >
+                {
+                  "number" : "$input.params('number')",
+                }
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
@@ -87,3 +102,9 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+plugins:
+  - serverless-offline
+custom:
+  serverless-offline:
+    port: 402
