Fix README and return current event instead of entire schedule on the handler

--- a/serverless.yml
+++ b/serverless.yml
@@ -39,7 +39,7 @@ provider:
 
 functions:
   sala:
-    handler: handler.getSalaInfo
+    handler: handler.getRoomInfo
     events:
       - http:
           path: /sala
