--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-tutorials",
-  "version": "0.0.0",
-  "description": "",
-  "main": "webpack.config.js",
+  "name": "IoNube",
+  "version": "1.0.0",
+  "description": "Proyecto para reserva de salas hecho en Redux.js + React.js con Node.js",
+  "main": "server-local.js",
   "dependencies": {
     "@slack/client": "^4.1.0",
     "autoprefixer": "^8.2.0",
@@ -49,8 +49,8 @@
     "serverless-offline": "^3.20.2"
   },
   "scripts": {
-    "dev": "webpack -w",
-    "server": "nodemon server-local.js",
+    "build": "webpack -w",
+    "local-server": "sudo nodemon ./servers/local/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
