--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "offline": "0.0.1",
     "precss": "^3.1.2",
     "react": "^0.14.6",
+    "react-animated-ellipsis": "^0.3.0",
     "react-countdown-now": "^1.3.0",
     "react-dom": "^0.14.6",
     "react-helmet": "^5.2.0",
